<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2022 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.settingslib.widget.TopIntroPreference
        android:key="health_connect_top_intro"
        android:title="@string/home_subtitle"
        android:order="0"
        />
    <PreferenceCategory
        android:key="recent_access"
        android:title="@string/recent_access_header"
        android:order="2"/>
    <PreferenceCategory
        android:key="permissions_and_data_category"
        android:title="@string/permissions_and_data_header"
        android:order="3">
        <com.android.healthconnect.controller.shared.preference.HealthPreference
            android:key="connected_apps"
            android:icon="?attr/appPermissionsIcon"
            android:title="@string/connected_apps_title"/>
        <com.android.healthconnect.controller.shared.preference.HealthPreference
            android:key="data_and_access"
            android:icon="?attr/dataAndAccessIcon"
            android:title="@string/data_title" />
    </PreferenceCategory>
</PreferenceScreen>
